tests/paczka1/small_fuzzy/38826056.err
Error in line 1: S966 S659 24,2
Error in line 5: S966 S966 74,0
